# colcon-output

./: .travis.yml  README.rst  appveyor.yml  setup.cfg  stdeb.cfg
colcon_output/event_handler/: console_cohesion.py  console_package_list.py  console_stderr.py  event_log.py  log.py  summary.py
test/: spell_check.words  test_flake8.py  test_spell_check.py  test_summary.py
