[metadata]
name = colcon-output
version = attr: colcon_output.__version__
url = https://colcon.github.io
download_url = https://github.com/colcon/colcon-output/releases
author = Dirk Thomas
author_email = web@dirk-thomas.net
maintainer = Dirk Thomas
maintainer_email = web@dirk-thomas.net
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Plugins
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python
    Topic :: Software Development :: Build Tools
license = Apache License, Version 2.0
description = Extension for colcon to customize the output in various ways.
keywords = colcon

[options]
install_requires =
  colcon-core
packages = find:
tests_require =
  flake8
  flake8-blind-except
  flake8-builtins
  flake8-class-newline
  flake8-comprehensions
  flake8-deprecated
  flake8-docstrings
  flake8-import-order
  flake8-quotes
  pep8-naming
  pyenchant
  pylint
  pytest
  pytest-cov
zip_safe = true

[options.entry_points]
colcon_core.event_handler =
    console_cohesion = colcon_output.event_handler.console_cohesion:ConsoleCohesionEventHandler
    console_stderr = colcon_output.event_handler.console_stderr:ConsoleStderrEventHandler
    event_log = colcon_output.event_handler.event_log:EventLogEventHandler
    log = colcon_output.event_handler.log:LogEventHandler
    summary = colcon_output.event_handler.summary:SummaryHandler
