[metadata]
name = colcon-output
version = attr: colcon_output.__version__
url = https://colcon.readthedocs.io
project_urls =
    Changelog = https://github.com/colcon/colcon-output/milestones?direction=desc&sort=due_date&state=closed
    GitHub = https://github.com/colcon/colcon-output/
author = Dirk Thomas
author_email = web@dirk-thomas.net
maintainer = Dirk Thomas
maintainer_email = web@dirk-thomas.net
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Plugins
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python
    Topic :: Software Development :: Build Tools
license = Apache License, Version 2.0
description = Extension for colcon to customize the output in various ways.
long_description = file: README.rst
keywords = colcon

[options]
python_requires = >=3.6
install_requires =
  colcon-core>=0.3.8
  colorama
packages = find:
zip_safe = true

[options.extras_require]
test =
  flake8>=3.6.0
  flake8-blind-except
  flake8-builtins
  flake8-class-newline
  flake8-comprehensions
  flake8-deprecated
  flake8-docstrings
  flake8-import-order
  flake8-quotes
  pep8-naming
  pylint
  pytest
  pytest-cov
  scspell3k>=2.2

[tool:pytest]
filterwarnings =
    error
    # Suppress deprecation warnings in other packages
    ignore:lib2to3 package is deprecated::scspell
    ignore:pkg_resources is deprecated as an API::flake8_import_order
    ignore:SelectableGroups dict interface is deprecated::flake8
    ignore:Using or importing the ABCs from 'collections' instead of from 'collections.abc' is deprecated::pyreadline
junit_suite_name = colcon-output
markers =
    flake8
    linter

[options.entry_points]
colcon_core.event_handler =
    console_cohesion = colcon_output.event_handler.console_cohesion:ConsoleCohesionEventHandler
    console_package_list = colcon_output.event_handler.console_package_list:ConsolePackageListEventHandler
    console_stderr = colcon_output.event_handler.console_stderr:ConsoleStderrEventHandler
    event_log = colcon_output.event_handler.event_log:EventLogEventHandler
    log = colcon_output.event_handler.log:LogEventHandler
    summary = colcon_output.event_handler.summary:SummaryHandler

[flake8]
import-order-style = google

[coverage:run]
source = colcon_output
